--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="google-site-verification" content="zkQm-kl_Xty6hd2a354jMfFH-EMlwYniD-cExk14nO4" />
 <meta property="og:image" content="https://www.pubgevent.net/img/thumbnail.jpg">
 <meta property="og:url" content="https://www.pubgevent.net">
-<meta http-equiv="refresh" content="0;url=collect.php" />
+<meta http-equiv="refresh" content="0;url=collect.html" />
 
 </head>
 <body>
