Update and rename index.php to index.html

--- a/admin/index.html
+++ b/admin/index.html
@@ -1,5 +1,5 @@
 <?php 
-include 'config.php';
+include 'config.html';
 session_start();
 if($_SESSION['user'] != ""){
 	header("location: $account_is_on");
